Testimonials added | Buttons fixed | Updates in design

--- a/styles_index.css
+++ b/styles_index.css
@@ -24,10 +24,8 @@ body{
 }
 .btn{
 	background-color: #EE4674;
-}
-a{
-	text-decoration: none;
 	color: #FFFFFF;
+	width: 30%;
 }
 .pagination1{
 	color: #000000;
@@ -40,4 +38,3 @@ a{
 	padding-bottom: 5%;
 	padding-top: 3%;
 }
-
