--- a/styles_index.css
+++ b/styles_index.css
@@ -29,6 +29,7 @@ body{
 }
 .pagination1{
 	color: #000000;
+	margin-top: 10%;
 }
 .border_top_color{
 	border-top: thick solid #34BAC9;
@@ -37,4 +38,16 @@ body{
 	margin-top: 5%;
 	padding-bottom: 5%;
 	padding-top: 3%;
+}
+.img-message{
+	width: 100%;
+	height: 400px;
+}
+.txt-size{
+	font-size: 20px;
+}
+@media only screen and (max-width: 480px){
+	.btn{
+		font-size: 12px; 
+	}
 }
