--- a/styles_index.css
+++ b/styles_index.css
@@ -47,7 +47,10 @@ body{
 	background-image: url("_img/woman_hands.jpg");
 	background-repeat: no-repeat;
   	background-attachment: fixed;
-        background-size: cover;
+        -webkit-background-size: cover;
+  	-moz-background-size: cover;
+  	-o-background-size: cover;
+	background-size: cover;
 }
 @media only screen and (max-width: 480px){
 	.btn{
