--- a/styles_index.css
+++ b/styles_index.css
@@ -47,10 +47,7 @@ body{
 	background-image: url("_img/woman_hands.jpg");
 	background-repeat: no-repeat;
   	background-attachment: fixed;
-        -webkit-background-size: cover;
-  	-moz-background-size: cover;
-  	-o-background-size: cover;
-	background-size: cover;
+	background-size: 100% 100%;
 }
 @media only screen and (max-width: 480px){
 	.btn{
