--- a/styles_index.css
+++ b/styles_index.css
@@ -47,7 +47,7 @@ body{
 	background-image: url("_img/woman_hands.jpg");
 	background-repeat: no-repeat;
   	background-attachment: fixed;
-	background-size: 100% 100%;
+	background-size: 100%;
 }
 @media only screen and (max-width: 480px){
 	.btn{
