--- a/styles_index.css
+++ b/styles_index.css
@@ -45,9 +45,8 @@ body{
 }
 #top-txt{
 	background-image: url("_img/woman_hands.jpg");
+	background-size: 100% 100%;
 	background-repeat: no-repeat;
-  	background-attachment: fixed;
-	background-size: 100%;
 }
 @media only screen and (max-width: 480px){
 	.btn{
