background-size: cover problems 5.0

--- a/styles_index.css
+++ b/styles_index.css
@@ -45,6 +45,9 @@ body{
 }
 #top-txt{
 	background-image: url("_img/woman_hands.jpg");
+	-webkit-background-size: cover;
+  	-moz-background-size: cover;
+  	-o-background-size: cover;
 	background-size: cover;
 	background-repeat: no-repeat;
 }
