--- a/styles_index.css
+++ b/styles_index.css
@@ -44,12 +44,10 @@ body{
 	font-size: 20px;
 }
 #top-txt{
-	background-image: url("_img/woman_hands.jpg");
-	-webkit-background-size: cover;
-  	-moz-background-size: cover;
-  	-o-background-size: cover;
-	background-size: cover;
+	background-image: url(_img/woman_hands.jpg);
 	background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: 100% 100%;
 }
 @media only screen and (max-width: 480px){
 	.btn{
