--- a/styles_index.css
+++ b/styles_index.css
@@ -24,7 +24,11 @@ body{
 .btn{
 	background-color: #EE4674;
 	color: #FFFFFF;
-	width: 30%;
+	width: 70%;
+}
+.pagination{
+	width: 50%;
+	background-color: #FFFFFF;
 }
 .pagination1{
 	font-size: 16px;
@@ -50,6 +54,9 @@ body{
 	background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: 100% 100%;
+}
+.add{
+	width: 40%;
 }
 @media only screen and (max-width: 480px){
 	.btn{
