--- a/styles_index.css
+++ b/styles_index.css
@@ -16,6 +16,8 @@ body{
 }
 .txt{
 	text-align: center;
+	color: #EE4674;
+
 }
 .txt-justify{
 	text-align: justify;
@@ -53,6 +55,9 @@ body{
 	background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: 100% 100%;
+}
+h5{
+	color: #EE4674;
 }
 .add{
 	width: 40%;
